# AlphaTrader

./: .gitignore  Dockerfile  README.md  app.py  final_verify_signals.py  graders.py  index.html  inference.py  inference_results.json  keepalive.py  mock_proxy.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_openenv.txt  server.py  test_api_flow.py  test_imports.py  tmp_bnh.py  tmp_diag.py  tmp_eval_final.py  tmp_grid.py  tmp_grid2.py  tmp_show.py  trading_env.py  transcript.json  verify_symbol_signals.py  verify_trade.py
agent/: __init__.py  ppo_agent.py  train.py
api/: __init__.py  main.py  paper_trader.py
backtest/: __init__.py  evaluate.py  metrics.py
data/: processed_market_data.parquet
data/raw/: GOLDBEES.NS.parquet  HINDALCO.NS.parquet  INDEX_NSEI.parquet  NMDC.NS.parquet  SILVERBEES.NS.parquet  SUZLON.NS.parquet  TATAPOWER.NS.parquet  TATASTEEL.NS.parquet  VEDL.NS.parquet  YESBANK.NS.parquet
environment/: __init__.py  reward.py  trading_env.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
llm/: explainer.py
scripts/: llm_hello.py  run_llm_hello.ps1
server/: app.py
