[project]
name = "alphatrader-rl"
version = "1.0.0"
description = "AlphaTrader-RL OpenEnv hackathon submission"
authors = [
    { name = "Kanishka Salgude", email = "kanishkasalgude5@gmail.com" }
]
dependencies = [
    "pandas==3.0.2",
    "numpy==2.4.4",
    "pyarrow==23.0.1",
    "gymnasium==1.2.3",
    "yfinance==1.2.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub>=0.23.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]
requires-python = ">=3.11"

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
